[package]
name = "ajazz-sdk"
description = "HidApi driver for Ajazz devices"
authors = ["TheJebForge", "mishamyrt"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/mishamyrt/ajazz-sdk"
repository = "https://github.com/mishamyrt/ajazz-sdk"
license = "MIT"

[dependencies]
hidapi = "2.6"
image = { version = "0.25.5", default-features = false, features = [
  "bmp",
  "jpeg",
] }
tokio = { version = "1", optional = true }

[features]
async = [
  "tokio",
  "tokio/sync",
  "tokio/rt-multi-thread",
  "tokio/time"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
